--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -2,7 +2,32 @@
 
 <body>
 <div>
-    {{some}}
+
+    <!-- Создание полей для ввода информации-->
+    <form method="post">
+        <label>
+            <input type="text" name="text" placeholder="Введите сообщение"/>
+            <input type="text" name="tag" placeholder="Тэг">
+            <button type="submit">Добавить</button>
+        </label>
+
+    </form>
+
 </div>
+
+<!-- Добавление фильтра-->
+<div>Список сообщений</div>
+<form method="post" action="filter">
+    <input type="text" name="filter">
+    <button type="submit">Найти</button>
+    <!-- Вывод списка сообщений на экран-->
+</form>
+{{#messages}}
+   <div>
+       <b>{{id}}</b>
+       <span>{{text}}</span>
+       <i>{{tag}}</i>
+   </div>
+{{/messages}}
 </body>
 </html>
